--- a/index.html
+++ b/index.html
@@ -5,11 +5,91 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>Document</title>
+  <title>Jordyn Thoreson</title>
 </head>
 <body>
   <!-- your code here -->
-   
+   <!-- nav bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Jordyn Thoreson</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resume</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Portfolio
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Pitch Decks</a></li>
+              <li><a class="dropdown-item" href="#">Websites</a></li>
+              <li><a class="dropdown-item" href="#">Logos & Graphics</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!-- Main Image -->
+  <img src="Assets/vecteezy_vibrant-abstract-background-with-colorful-diagonal-stripes_49332024.jpg" class="img-fluid mb-5" alt="multicolored diagonal stripes">
+  <!-- Columns -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <h1 class="mb-3">Life & Career</h1>
+        <p>Jordyn Thoreson studied Advertising at the University of Florida and graduated in the spring of 2023. By August, she secured a full-time position as a Communications Assistant for the UF Human Resources (UFHR) Department of Communications and Worklife. Shortly after, Jordyn decided to pursue graduate studies at the University of Florida, where she is currently pursuing a Master or Arts in Mass Communication (MAMC) with a concentration in Web Design and Online Communication. She has also since been promoted to Communications Specialist in her role at UFHR.
+        </p>
+        <p>
+          <a class="btn btn-primary d-grid mt-4" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Learn More
+          </a>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            While Jordyn enjoys working with internal communications and programming, her ultimate career goals include B2C agency work and, eventually, freelancing and working with small businesses and non-profits to optimize their branding and online presence. Once she completes her graduate studies, Jordyn plans to pursue these goals and hopes to make a lasting impact on her community through her work.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mt-3" style="justify-items: center; text-align: center">
+        <div class="card" style="width: 100%;">
+          <div class="card-header">
+            <h2>Hobbies</h2>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Skating</li>
+            <li class="list-group-item">Karaoke</li>
+            <li class="list-group-item">Boating</li>
+            <li class="list-group-item">Reading</li>
+            <li class="list-group-item">Baking</li>
+          </ul>
+        </div>
+        <div class="card mt-4" style="width: 100%;">
+          <div class="card-header">
+            <h2>Interests</h2>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Health & Fitness</li>
+            <li class="list-group-item">Live Music</li>
+            <li class="list-group-item">Travel</li>
+            <li class="list-group-item">Classic Literature</li>
+            <li class="list-group-item">Cooking Shows</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
