--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="col-md-9">
         <h1 class="mb-3">Life & Career</h1>
-        <p>Jordyn Thoreson studied Advertising at the University of Florida and graduated in the spring of 2023. By August, she secured a full-time position as a Communications Assistant for the UF Human Resources (UFHR) Department of Communications and Worklife. Shortly after, Jordyn decided to pursue graduate studies at the University of Florida, where she is currently pursuing a Master or Arts in Mass Communication (MAMC) with a concentration in Web Design and Online Communication. She has also since been promoted to Communications Specialist in her role at UFHR.
+        <p>Jordyn Thoreson studied Advertising at the University of Florida and graduated in the spring of 2023. By August, she secured a full-time position as a Communications Assistant for the UF Human Resources (UFHR) Department of Communications and Worklife. Shortly after, Jordyn decided to pursue graduate studies at the University of Florida, where she is currently pursuing a Master of Arts in Mass Communication (MAMC) with a concentration in Web Design and Online Communication. She has also since been promoted to Communications Specialist in her role at UFHR.
         </p>
         <p>
           <a class="btn btn-primary d-grid mt-4" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
